--- a/employees-manager-fe/package.json
+++ b/employees-manager-fe/package.json
@@ -7,13 +7,13 @@
     "start:mocked": "ng serve --open -c mocked",
     "start:dev": "ng serve --open -c dev",
     "start:maintenance": "ng serve --open -c maintenance",
-    "start:preprod": "ng serve --open -c preprod",
+    "start:pre": "ng serve --open -c pre",
     "start:prod": "ng serve --open -c prod",
     "build": "ng build -c local",
     "build:mocked": "ng build -c mocked",
     "build:dev": "ng build -c dev",
     "build:maintenance": "ng build -c maintenance",
-    "build:preprod": "ng build -c preprod",
+    "build:pre": "ng build -c pre",
     "build:prod": "ng build -c prod",
     "generate-colors": "node colors-utils/colors-generator.js"
   },
