--- a/employees-manager/Cargo.toml
+++ b/employees-manager/Cargo.toml
@@ -26,7 +26,7 @@ axum-extra = { version = "0.10.0", features = ["typed-header"] }
 async-trait = "0.1.84"
 headers = "0.4"
 tower = { version = "0.5.2", features = ["timeout"] }
-tower-http = { version = "0.6.2", features = ["trace", "cors"] }
+tower-http = { version = "0.6.2", features = ["trace", "cors", "fs"] }
 # jwt
 jsonwebtoken = "8.0"
 # time
@@ -63,6 +63,13 @@ derive_builder = "0.20.2"
 paste = "1.0.15"
 # excel
 rust_xlsxwriter = { version = "0.84.0", features = ["serde", "chrono"] }
+# object storage
+# https://docs.rs/object_store/latest/object_store/
+object_store = { version = "0.12.0", features = ["gcp"] }
+url = "2.5.4"
+bytes = "1.10.1"
+# temporary directory
+tempfile = "3.19.1"
 
 [dev-dependencies]
 #mockall = "0.12.1"
